--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -18,6 +18,13 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
+.App{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+}
+
 h1, h2{
     font-weight: 100;
 }
