--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -1,3 +1,7 @@
+@import "Footer.css";
+@import "Header.css";
+
+
 *{
     margin: 0;
     padding: 0;
@@ -10,6 +14,7 @@
     --default-border: 1px solid rgba(255, 255, 255, 0.137);
     --default-bg-color: #2B2B2B;
     --default-text-color: #C6C6C6;
+    --default-padding: 30px 50px;
 }
 
 body{
