--- a/src/CSS/Footer.css
+++ b/src/CSS/Footer.css
@@ -1,4 +1,22 @@
 footer{
     background-color: var(--nav-gray);
-    padding: var(--default-padding)
+    padding: var(--default-padding);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer i{
+    font-size: 30px;
+    margin: 0 5px;
+}
+
+footer div{
+    max-width: 200px;
+}
+
+footer .separator{
+    background-color: rgba(255, 255, 255, 0.103);
+    width: 1px;
+    height: 100%;
 }
