--- a/src/CSS/ImageSlider.css
+++ b/src/CSS/ImageSlider.css
@@ -3,4 +3,17 @@
     height: 600px;
     background-size: cover;
     background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.image-slider-container h1{
+    font-size: 128px;
+    color: var(--title-yellow);
+}
+
+.image-slider-container h2{
+    font-size: 36px;
 }
