--- a/src/CSS/ImageSlider.css
+++ b/src/CSS/ImageSlider.css
@@ -1,19 +1,36 @@
 .image-slider-container{
     position: relative;
-    height: 600px;
+    min-height: 600px;
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 50px 100px;
+}
+
+.image-slider-container img{
+    width: 100%;
+    height: 100%;
+    object-position: center;
+    object-fit: cover;
+    position: absolute;
+    opacity: 0.3;
+    filter: grayscale(1);
 }
 
 .image-slider-container h1{
     font-size: 128px;
     color: var(--title-yellow);
+    position: relative;
+    font-weight: 400;
+    text-align: center;
 }
 
 .image-slider-container h2{
     font-size: 36px;
+    position: relative;
+    font-weight: 300;
+    text-align: center;
 }
