Animated category cards

--- a/src/CSS/PhotosPage.css
+++ b/src/CSS/PhotosPage.css
@@ -1,11 +1,12 @@
 .category-card-container{
-    height: 500px;
+    height: 300px;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
     text-decoration: none;
+    overflow: hidden;
 }
 
 .category-card-container img{
@@ -14,10 +15,23 @@
     object-fit: cover;
     object-position: center;
     position: absolute;
-    opacity: 0.3;
 }
 
 .category-card-container h1{
     font-size: 120px;
     position: relative;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.category-card-container img:hover{
+    opacity: 0.3;
+    transform: scale(1.1);
+    transition: opacity 0.5s, transform 3s;
+}
+
+.category-card-container img:hover + h1{
+    opacity: 1;
+    transition: all 0.5s;
+    transform: translateY(-20px)
 }
