--- a/src/CSS/AboutPage.css
+++ b/src/CSS/AboutPage.css
@@ -3,7 +3,7 @@
     grid-template-columns: 400px auto;
     grid-gap: 20px;
     max-width: 1000px;
-    margin: 20px auto;
+    margin: 0 auto;
 }
 
 .about-container img{
