--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -4,6 +4,9 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    z-index: 10;
+    width: 100%;
 }
 
 .page-title-container{
@@ -17,7 +20,11 @@ header{
 }
 
 .page-title-container h1{
-    font-size: 48px;
+    font-size: 30px;
+}
+
+.page-title-container h2{
+    font-size: 16px;
 }
 
 nav{
@@ -26,7 +33,7 @@ nav{
 
 nav a{
     color: inherit;
-    font-size: 30px;
+    font-size: 20px;
     text-decoration: none;
     margin: 0 20px;
 }
@@ -36,8 +43,8 @@ nav a:hover{
 }
 
 header i{
-    font-size: 40px;
-    margin: 0 10px
+    font-size: 20px;
+    margin: 0 5px
 }
 
 nav a.active{
