--- a/src/CSS/GalleryPage.css
+++ b/src/CSS/GalleryPage.css
@@ -17,5 +17,29 @@
   }
 
   .my-masonry-grid_column img{
-    width: 100%
+    width: 100%;
+    cursor: pointer;
+  }
+
+  .my-masonry-grid_column img:hover{
+    opacity: 0.6;
+  }
+
+  .image-viewer{
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.582);
+    z-index: 100;
+    backdrop-filter: blur(10px);
+  }
+
+  .image-viewer img{
+    width: 90%;
+    height: 90%;
+    object-fit: contain;
   }
