--- a/src/CSS/AboutPage.css
+++ b/src/CSS/AboutPage.css
@@ -4,6 +4,7 @@
     grid-gap: 20px;
     max-width: 1000px;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .about-container img{
@@ -13,4 +14,17 @@
 .about-container .text-container{
     border-left: 1px solid rgba(255, 255, 255, 0.192);
     padding-left: 20px;
+}
+
+/* mobile */
+@media only screen and (max-width: 500px){
+    .about-container{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .about-container .text-container{
+        border: none;
+        padding-right: 20px;
+    }
 }
