--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -91,6 +91,13 @@ header .mobile-button{
     margin-top: 20px;
 }
 
+.mobile-menu .close-menu-container{
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 178px;
+}
+
 /* Mobile styles */
 @media only screen and (max-width: 500px){
     header .nav-desktop {display: none}
