--- a/src/CSS/ImageSlider.css
+++ b/src/CSS/ImageSlider.css
@@ -39,3 +39,14 @@
     font-weight: 300;
     text-align: center;
 }
+
+/* mobile */
+@media only screen and (max-width: 500px){
+    .image-slider-container{
+        padding: 30px 10px;
+    }
+
+    .image-slider-container h2{
+        font-size: 26px;
+    }
+}
