--- a/src/CSS/Footer.css
+++ b/src/CSS/Footer.css
@@ -20,3 +20,22 @@ footer .separator{
     width: 1px;
     height: 100%;
 }
+
+/* mobile */
+@media only screen and (max-width: 500px){
+    footer{
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    footer .separator{
+        width: 100%;
+        height: 1px;
+        margin: 10px 0
+    }
+
+    footer div{
+        max-width: 100%;
+        text-align: center;
+    }
+}
