--- a/src/CSS/ImageSlider.css
+++ b/src/CSS/ImageSlider.css
@@ -46,7 +46,11 @@
         padding: 30px 10px;
     }
 
+    .image-slider-container h1{
+        font-size: 40px;
+    }
+
     .image-slider-container h2{
-        font-size: 26px;
+        font-size: 20px;
     }
 }
